--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,16 @@
 @import url('/css/reset_css.css');
 
+:root {
+	--background: rgb(13, 13, 13);
+	--matrix: rgba(0, 255, 156, 0.4);
+	--accent: rgb(0, 255, 198);
+	--text: rgb(234, 234, 234);
+}
+
 body {
     font-family: 'Heebo', sans-serif;
+	position: relative;
+	background: var(--background);
 }
 #body.lock {
 	overflow: hidden;
@@ -19,14 +28,27 @@ body {
 	opacity: 1;
 	visibility: visible;
 }
+
+canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+    pointer-events: none;
+    background: var(--background);
+}
+
 .header {
-    background-color: #fff;
-	border-bottom: #FF6464 solid 2px;
+    background-color: var(--background);
 	position: fixed;
 	width: 100%;
 	top: 0;
 	left: 0;
 	z-index: 1;
+	border-bottom: 1px solid var(--accent);
+	padding: 5px 0;
 }
 .container {
     max-width: 992px;
@@ -43,12 +65,12 @@ body {
 .nav_menu a {
 	font-weight: 500;
 	font-size: 20px;
-	color: #000;
+	color: var(--text);
 	text-decoration: none;
 	transition: all 0.3s ease;
 }
 .main {
-	background-color: #fff;
+	background-color: transparent;
 }
 .main_content {
 	display: flex;
@@ -57,31 +79,34 @@ body {
 	margin: 70px 0;
 }
 .main_content_title h1 {
-	color: #21243D;
+	color: var(--text);
 	font-weight: 700;
 	font-size: 44px;
 	line-height: 130%;
 }
+
+.main_content_title span {
+	color: var(--accent);
+}
 .main_content_title p {
-	color: #21243D;
+	color: var(--text);
 	font-weight: 400;
 	font-size: 16px;
 	margin: 40px 0;
 	line-height: 130%;
 }
 .contact_btn {
-	color: #fff;
+	color: var(--background);
 	text-decoration: none;
 	font-weight: 500;
 	font-size: 20px;
 	padding: 15px 30px 15px 30px;
-	background-color: #FF6464;
+	background-color: var(--accent);
 	border: none;
     border-radius: 30px;
 	transition: ease 0.3s all;
 	cursor: pointer;
 }
-
 .menu_form {
 	position: fixed;
 	top: 40%;
@@ -91,7 +116,8 @@ body {
 	visibility: hidden;
 	z-index: 5;
 	border-radius: 30px;
-	background-color: #fff;
+	background-color: var(--background);
+	border: 1px solid var(--accent);
 }
 .menu_form.window_filter {
     opacity: 1;
@@ -136,7 +162,7 @@ body {
     transform: rotate(45deg);
     position: absolute;
     top: 13px;
-    background: #142850;
+    background: var(--accent);
 }
 
 .close_button::after{
@@ -146,11 +172,11 @@ body {
     transform: rotate(-45deg);
     position: absolute;
     bottom: 14px;
-    background: #142850;
+    background: var(--accent);
 }
 
 .dropdown_menu_form_input {
-    border:  1px solid #FF6464;
+    border:  1px solid var(--accent);
     outline: none;
     border-radius: 15px;
     padding: 15px 30px;
@@ -158,11 +184,11 @@ body {
 }
 
 .dropdown_menu_form_input:focus {
-    outline: #FF6464 1.5px solid;
+    outline: var(--accent) 1.5px solid;
 }
 
 .form_btn {
-	background-color: #FF6464;
+	background-color: var(--accent);
     padding: 15px 50px;
     outline: 0;
     border: none;
@@ -171,13 +197,13 @@ body {
     border-radius: 30px;
     font-weight: 500;
     font-size: 20px;
-    color: #fff;
+    color: var(--background);
 }
 .skills {
-	background-color: #EDF7FA;
+	background-color: transparent;
 }
 .skills_content h2 {
-	color: #21243D;
+	color: var(--text);
 	font-weight: 400;
 	font-size: 40px;
 	line-height: 60px;
@@ -189,14 +215,18 @@ body {
 	margin: 50px 0;
 	transition: ease 0.3s ease;
 }
+
+.sub_skills_content img {
+	transition: all 0.3s ease;
+}
 .works {
-	background-color: #fff;
+	background-color: transparent;
 }
 .works_content {
 	margin-bottom: 120px;
 }
 .works_content h2 {
-	color: #21243D;
+	color: var(--text);
 	font-size: 40px;
 	font-weight: 400;
 	line-height: 60px;
@@ -208,82 +238,149 @@ body {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	border-bottom: #E0E0E0 solid 1px;
+	border-bottom: var(--accent) solid 1px;
 	padding: 20px 0;
 }
+
+.first_work img,
+.second_work img,
+.third_work img {
+	transition: all 0.3s ease;
+	cursor: pointer;
+}
+
 .first_work_title {
-	color: #21243D;
+	color: var(--text);
 	font-size: 30px;
 	font-weight: 700;
 }
 .first_work_content span {
-	color: #FFF;
+	color: var(--text);
 	font-size: 18px;
 	font-weight: 900;
 	border-radius: 16px;
-	background-color: #142850;
+	background-color: var(--background);
 	padding: 3px 15px 3px 15px;
 	margin-right: 25px;
 }
 .second_work_title {
-	color: #8695A4;
+	color: var(--accent);
 	font-size: 20px;
 	font-weight: 400;
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
 .second_work_content span {
-	color: #FFF;
+	color: var(--text);
 	font-size: 18px;
 	font-weight: 900;
 	border-radius: 16px;
-	background-color: #142850;
+	background-color: var(--background);
 	padding: 3px 15px 3px 15px;
 	margin-right: 25px;
 }
 .third_work_title {
-	color: #21243D;
+	color: var(--text);
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 130%;
 }
 .third_work_content span {
-	color: #FFF;
+	color: var(--text);
 	font-size: 18px;
 	font-weight: 900;
 	border-radius: 16px;
-	background-color: #142850;
+	background-color: var(--background);
 	padding: 3px 15px 3px 15px;
 	margin-right: 25px;
 }
 .footer {
-	background-color: #fff;
+	background-color: transparent;
 }
 .footer_content {
-	text-align: center;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
 }
 .sub_footer_content a + a {
 	margin-left: 35px;
 }
 .footer_content p {
-	color: #21243D;
+	color: var(--text);
 	font-size: 14px;
 	font-weight: 400;
 	margin-top: 25px;
 	margin-bottom: 50px;
 }
+.sub_footer_content img {
+	transition: all 0.3s ease;
+}
+
+
+
+.arrow {
+	border-radius: 25px;
+	margin-bottom: 50px;
+	cursor: pointer;
+	position: relative;
+	width: 45px;
+	height: 45px;
+	transform: rotate(-90deg);
+	border: 1px solid var(--accent);
+	padding: 15px;
+
+}
+.arrow div {
+	position: relative;
+	top: 20px;
+	width: 40px;
+	height: 5px;
+	background-color: var(--accent);
+	left:0;
+	display: block;
+}
+.arrow div::after {
+	content: '';
+	position: absolute;
+	width: 20px;
+	height: 5px;
+	top: -6px;
+	right: -3px;
+	background-color: var(--accent);
+	transform: rotate(45deg);
+}
+.arrow div::before {
+	content: '';
+	position: absolute;
+	width: 20px;
+	height: 5px;
+	top: 6px;
+	right: -3px;
+	background-color: var(--accent);
+	transform: rotate(-45deg);
+}
+
 @media (hover: hover) {
 	.nav_menu a:hover {
-		color: #f12525;
+		color: var(--matrix);
 	}
 	.contact_btn:hover {
-		background-color: #f12525;
+		background-color: var(--matrix);
 	}
+	.first_work img:hover,
+	.second_work img:hover,
+	.third_work img:hover {
+		transform: scale(1.1);
+	}	
 	.sub_skills_content img:hover {
 		transform: scale(1.2);
 	}
 	.form_btn:hover {
-		background-color: #f12525;
+		background-color: var(--matrix);
+	}
+
+	.sub_footer_content img:hover {
+		transform: scale(1.2);
 	}
 }
 @media screen and (max-width: 992px) {
@@ -306,7 +403,7 @@ body {
 	}
 	.burg span {
 		position: absolute;
-		background-color: #000;
+		background-color: var(--accent);
 		left: 0;
 		width: 100%;
 		height: 2px;
@@ -316,7 +413,7 @@ body {
 	.burg::before,
 	.burg::after {
 		content: '';
-		background-color: #000;
+		background-color: var(--accent);
 		position: absolute;
 		width: 100%;
 		height: 2px;
@@ -332,12 +429,12 @@ body {
 	.burg.visible::before{
 		transform: rotate(45deg);
 		top: 9px;
-		background-color: #FF6464;
+		background-color: var(--accent);
 	}
 	.burg.visible::after{
 		transform: rotate(-45deg);
 		bottom: 9px;
-		background: #FF6464;
+		background: var(--accent);
 	}
 	.burg.visible span {
 		transform: scale(0);
@@ -349,10 +446,10 @@ body {
 		width: 100%;
 		height: 50%;
 		transition: all 0.3s ease;
-		background-color: #fff;
+		background-color: var(--background);
 		padding: 20px 0px 0px 70px ;
 		z-index: 12;
-		box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+
 	}
 	.navigation.visible {
 		left: 0;
@@ -373,10 +470,10 @@ body {
 		top: 20%;
 		left: 50%;
 		transform: translate(-20%, -10%) scale(0.1);
-}
+	}
 	.menu_form.window_filter {
 		transform: translate(-50%, -15%) scale(1);
-}
+	}
 	.first_work {
 		display: block;
 		text-align: center;
@@ -413,17 +510,9 @@ body {
 		top: 13%;
 		left: 0;
 		transform: translate(-20%, -10%) scale(0.1);
-		-webkit-border-radius: 0;
-		-moz-border-radius: 0;
-		-ms-border-radius: 0;
-		-o-border-radius: 0;
-}
+	}
 	.menu_form.window_filter {
 		transform: translate(0, -15%) scale(1);
-		-webkit-transform: translate(0, -15%) scale(1);
-		-moz-transform: translate(0, -15%) scale(1);
-		-ms-transform: translate(0, -15%) scale(1);
-		-o-transform: translate(0, -15%) scale(1);
 	}
 	.dropdown_menu {
 		padding: 0;
